# httpagentparser

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  README.rst  benchmark.py  dev-notes.md  dev-notes.rst  index.html  notes  params.json  pyproject.toml  setup.py  test_more.py  tests.py  tox.ini  useragent.py  useragent.txt
httpagentparser/: __init__.py  dev-notes.rst
